# IngameIME-Rust-Core

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md
.github/workflows/: rust-ci.yml
src/: callbacks.rs  context.rs  jni_api.rs  jvm.rs  lib.rs  logger.rs  model.rs
src/platform/linux/: backend.rs  ibus.rs  mod.rs  wayland.rs  x11.rs
src/platform/windows/: imm32.rs  mod.rs  tsf.rs
