[package]
name = "ingameime_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
jni-adapter = ["dep:jni", "dep:jni-sys"]
x11 = [
    "dep:raw-window-handle",
    "dep:x11rb",
    "dep:xkbcommon",
]
wayland = [
    "dep:raw-window-handle",
    "dep:wayland-client",
    "dep:wayland-protocols",
]

[dependencies]
jni = { version = "0.22.4", optional = true }
jni-sys = { version = "0.4", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", default-features = false, features = ["xkb"], optional = true }
xkbcommon = { version = "0.9.0", features = ["x11"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_Ime",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }
